# SharkClient

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
UDP-MQTT Server/proto/: messages.proto
docs/: UDP_LOW_LATENCY_PLAN.md  project-memory-and-chat-recovery.md
flatpak/: com.jnushark.SharkClient.desktop  com.jnushark.SharkClient.metainfo.xml  com.jnushark.SharkClient.yml
resources/: MessageMQTTConfig.yaml  RoboSelect.yaml  RobotConfig.yaml  splash.html
resources/CustomByteBlockConfigs/: balance.proto  balance.xml  drone.proto  drone.xml  engineer.proto  engineer.xml  hero.proto  hero.xml  infantry.proto  infantry.xml  radar.proto  radar.xml  sentry.proto  sentry.xml
resources/CustomData/: ReceiveDataBlock.proto  Settings.xml  Template.proto
scripts/: build-ffmpeg-minimal-linux.sh  build-ffmpeg-minimal.ps1  build-flatpak.sh  build-linux-client.sh  detection_pipe_server.py  download-onnxruntime.ps1  download-onnxruntime.sh  extract-calib-frames.py  generate-mqtt-proto-json.mjs  install-cuda-stack.ps1  install-cuda-stack.sh  install-hevc-webcodecs.ps1  install-lite-env.ps1  install-lite-env.sh  package-lite-linux.sh  package-lite.ps1  package-mini.ps1  package-single.ps1  quantize-tensorrt.ps1  quantize-tensorrt.py  verify-mqtt-proto.mjs
src/: App.vue  api-shim.ts  env.d.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  ffmpeg_ffi.rs  ffmpeg_shim.c  lib.rs  main.rs  mqtt_client.rs  shm_bridge.rs  udp_bridge.rs  video_decoder.rs  video_decoder_internal.rs
src-tauri/src/mqtt_client/: local_broker.rs
src-tauri/src/udp_bridge/: assembly.rs  codec_detect.rs  mjpeg.rs  stats.rs
src-tauri/src/video_decoder/: gpu.rs  native.rs
(+96 files in other folders)
